--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
     <link rel="stylesheet" href="style.css" />
     <script src="app.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div><h1>Weather App</h1></div>
+    </div>
+  </body>
 </html>
