--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
   </head>
   <body>
     <div class="container">
-      <div><h1>Weather App</h1></div>
+      <div>
+        <h1>Weather App</h1>
+        <input type="text" placeholder="Enter your city" id="city" />
+        <input type="button" value="Get Weather" id="btn" />
+      </div>
     </div>
   </body>
 </html>
