--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
     <div class="container">
       <div>
         <h1>Weather App</h1>
-        <input type="text" placeholder="Enter your city" id="city" />
-        <input type="button" value="Get Weather" id="btn" />
+        <form>
+          <input type="text" placeholder="Enter your city" id="city" />
+          <input type="submit" value="Get Weather" id="btn" />
+        </form>
       </div>
+      <div class="weather-container"></div>
     </div>
   </body>
 </html>
